fem mesh calc foundation
