# apps/api/app/schemas/base.py
@@ -4,6 +4,7 @@ PHYSICAL_UNIT_SUFFIXES: tuple[str, ...] = (
     "_nm",
     "_um",
     "_um2",
+    "_m2",
     "_km",
     "_db",
     "_dbm",
@@ -40,6 +41,12 @@ DIMENSIONLESS_NUMERIC_FIELDS: set[str] = {
     "pmd_sample_cable_count",
     "prescribed_strain",
     "valid_point_count",
+    "node_count",
+    "element_count",
+    "refinement_level",
+    "elements",
+    "minimum_normalized_quality",
+    "mean_normalized_quality",
     "normalized_deviatoric_difference_kernel",
     "sap_thermal_mismatch_strains",
     "kernel_scale",
